♻️ Refactor(result-detail) P2-1880: Adjust padding and gap in fixed data container for improved layout consistency

--- a/onecgiar-pr-client/src/app/pages/results/pages/result-detail/result-detail.component.scss
+++ b/onecgiar-pr-client/src/app/pages/results/pages/result-detail/result-detail.component.scss
@@ -24,10 +24,10 @@
     border-top-left-radius: 0px !important;
     border-top-right-radius: 0px !important;
     .fixed_data_container {
-      padding: 10px 80px 0px 80px;
+      padding: 30px 80px 30px 80px;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 30px;
       .section_name {
         font-size: 16px;
         color: #808080;
